CURD Testing and MathServices Testing

--- a/CURD_Tests/CURD_Tests.csproj
+++ b/CURD_Tests/CURD_Tests.csproj
@@ -19,6 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MathServiceContracts\MathServiceContracts.csproj" />
+    <ProjectReference Include="..\MathServices\MathServices.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
