--- a/CURD_Practice/appsettings.json
+++ b/CURD_Practice/appsettings.json
@@ -9,6 +9,12 @@
 
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PersonsDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
+
+    "EPPlus": {
+        "ExcelPackage": {
+            "License": "NonCommercialPersonal:Jo Khong"
+        }
     }
 
 }
