--- a/CURD_Tests/CURD_Tests.csproj
+++ b/CURD_Tests/CURD_Tests.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Bogus" Version="35.6.5" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="EntityFrameworkCoreMock.Moq" Version="2.4.0" />
+    <PackageReference Include="Fizzler" Version="1.3.0" />
+    <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8" />
